# identicon

./: .travis.yml  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
benches/: generate.rs
src/: hsl.rs  lib.rs  main.rs  nibbler.rs
