[package]
name = "identicon"
version = "0.1.1"
authors = ["David Graham <david.malcom.graham@gmail.com>"]
description = "A port of GitHub's identicon algorithm to Rust."
repository = "https://github.com/dgraham/identicon"
license = "MIT"
edition = "2018"

[lib]
name = "identicon"

[dependencies]
image = { version = "0.23.14", default-features = false, features = ["png"] }
md-5 = { version = "0.9.1", features = ["asm"] }

[[bin]]
name = "identicon"
