[package]
name = "identicon"
version = "0.2.1"
authors = ["David Graham <david.malcom.graham@gmail.com>"]
description = "A port of GitHub's identicon algorithm to Rust."
repository = "https://github.com/dgraham/identicon"
license = "MIT"
edition = "2018"

[features]
default = ["build-bin"]
build-bin = ["md-5"]

[lib]
name = "identicon"

[dependencies]
image = { version = "0.25.0", default-features = false, features = ["png"] }
md-5 = { version = "0.10", optional = true }

[[bin]]
name = "identicon"
required-features = ["build-bin"]
